--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
-    --cor-fundo: #01080E ;
+    --cor-fundo: #1d0124 ;
     --cor-principal: #0B0D20 ;
-    --cor-secundaria: #212333; 
-    --cor-destaque: #2BDEFD;
+    --cor-secundaria: #210235; 
+    --cor-destaque: #f044eb;
     --cor-texto: #D7F9FF;
 
 }
